// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CardDetailView generated file inspection > renders non-empty evidence with summary counters and file list 1`] = `
"<div data-v-61cbb27f="" class="card-detail-container">
  <section data-v-61cbb27f="" class="detail-section header-section" data-testid="card-detail-highlight">
    <div data-v-61cbb27f="" class="detail-title-row"><span data-v-61cbb27f="" class="detail-type-badge type-code">(C) code</span>
      <h1 data-v-61cbb27f="" class="detail-title">Card 1</h1><span data-v-61cbb27f="" class="detail-status-chip status-done">done</span><button data-v-61cbb27f="" type="button" class="discuss-btn" aria-label="Discuss card with analyst">Discuss with analyst</button>
    </div>
    <div data-v-61cbb27f="" class="detail-id">ID: card-1</div>
    <div data-v-61cbb27f="" class="detail-callout" role="status">This card is marked done; review and evidence determine whether operators should accept completion.</div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </section>
  <!--v-if-->
  <!--v-if-->
  <section data-v-61cbb27f="" class="detail-section">
    <h3 data-v-61cbb27f="" class="section-heading">Metadata</h3>
    <div data-v-61cbb27f="" class="meta-grid">
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Created</span><span data-v-61cbb27f="" class="meta-value" title="Jan 1, 2025, 01:00:00 AM">Jan 1, 2025, 01:00:00 AM</span></div>
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Updated</span><span data-v-61cbb27f="" class="meta-value" title="Jan 1, 2025, 01:00:00 AM">Jan 1, 2025, 01:00:00 AM</span></div>
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Version</span><span data-v-61cbb27f="" class="meta-value">unknown</span></div>
      <!--v-if-->
      <!--v-if-->
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Priority</span><span data-v-61cbb27f="" class="meta-value">1</span></div>
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Urgency</span><span data-v-61cbb27f="" class="meta-value">normal</span></div>
      <!--v-if-->
      <!--v-if-->
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Retries</span><span data-v-61cbb27f="" class="meta-value">0</span></div>
    </div>
  </section>
  <section data-v-6e31abb8="" data-v-61cbb27f="" class="detail-section">
    <div data-v-6e31abb8="" class="panel-header-row">
      <div data-v-6e31abb8="">
        <h3 data-v-6e31abb8="" class="section-heading">Card history</h3>
        <p data-v-6e31abb8="" class="panel-copy">Inspect tracked versions, fetch a full prior snapshot, and compare it to the current card.</p>
      </div>
      <div data-v-6e31abb8="" class="panel-header-actions"><button data-v-6e31abb8="" type="button" class="filter-chip" title="Filter card history by editor (currently: analyst)">by analyst</button><button data-v-6e31abb8="" type="button" class="retry-btn">Refresh history</button></div>
    </div>
    <div data-v-6e31abb8="" class="history-layout">
      <div data-v-6e31abb8="" class="history-list"><button data-v-6e31abb8="" type="button" class="history-item selected">
          <div data-v-6e31abb8="" class="history-item-top"><span data-v-6e31abb8="" class="badge subtle">v2</span><span data-v-6e31abb8="" class="badge">analyst</span><span data-v-6e31abb8="" class="badge analyst-badge">analyst (web-chat)</span><span data-v-6e31abb8="" class="badge subtle">web-chat</span></div>
          <div data-v-6e31abb8="" class="history-summary">updated title</div>
          <div data-v-6e31abb8="" class="history-fields">Changed: title</div>
          <div data-v-6e31abb8="" class="history-time" title="Jan 1, 2025, 01:00:00 AM">Jan 1, 2025, 01:00:00 AM</div>
        </button></div>
      <div data-v-6e31abb8="" class="history-detail">
        <div data-v-6e31abb8="" class="empty-evidence">Select a version to inspect its snapshot and diff.</div>
      </div>
    </div>
  </section>
  <section data-v-61cbb27f="" class="detail-section">
    <h3 data-v-61cbb27f="" class="section-heading">Completion &amp; blockers</h3>
    <div data-v-61cbb27f="" class="meta-grid">
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Completion state</span><span data-v-61cbb27f="" class="meta-value">marked-done</span></div>
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Evidence readiness</span><span data-v-61cbb27f="" class="meta-value">1 recorded evidence path is blocked by file-access security.</span></div>
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Child work</span><span data-v-61cbb27f="" class="meta-value">1 children: 1 active/running, 0 blocked/failed, 0 done</span></div>
    </div>
    <div data-v-61cbb27f="" class="link-list-row"><span data-v-61cbb27f="" class="meta-key">Blocking dependencies</span>
      <div data-v-61cbb27f="" class="pill-list"><button data-v-61cbb27f="" type="button" class="nav-pill">goal-1</button></div>
    </div>
    <!--v-if-->
    <div data-v-61cbb27f="" class="planning-summary"><strong data-v-61cbb27f="">Planning</strong>
      <div data-v-61cbb27f="">Status: done</div>
      <div data-v-61cbb27f="">Planner completed</div>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </section>
  <section data-v-61cbb27f="" class="detail-section">
    <h3 data-v-61cbb27f="" class="section-heading">Hierarchy</h3>
    <div data-v-61cbb27f="" class="link-list-row"><span data-v-61cbb27f="" class="meta-key">Ancestors</span>
      <div data-v-61cbb27f="" class="pill-list"><button data-v-61cbb27f="" type="button" class="nav-pill">project</button></div>
    </div>
    <div data-v-61cbb27f="" class="children-list"><button data-v-61cbb27f="" type="button" class="child-row"><span data-v-61cbb27f="" class="generated-file-main"><span data-v-61cbb27f="" class="generated-file-path">child-1</span><span data-v-61cbb27f="" class="badge">test</span><span data-v-61cbb27f="" class="badge status-running">running</span></span><span data-v-61cbb27f="" class="generated-file-description">Child</span></button></div>
  </section>
  <section data-v-61cbb27f="" class="detail-section">
    <h3 data-v-61cbb27f="" class="section-heading">Evidence &amp; generated files</h3>
    <div data-v-61cbb27f="" class="evidence-summary">1 recorded evidence path is blocked by file-access security.</div>
    <div data-v-61cbb27f="" class="pill-list summary-pills"><span data-v-61cbb27f="" class="badge">Files: 2</span><span data-v-61cbb27f="" class="badge">Checks: 1</span><span data-v-61cbb27f="" class="badge">Tool errors: 1</span>
      <!--v-if--><span data-v-61cbb27f="" class="badge error">Blocked: 1</span>
      <!--v-if--><span data-v-61cbb27f="" class="badge warning">Parse recovery</span>
    </div>
    <div data-v-61cbb27f="" class="preview-notice warning">Executor final response was malformed; generated files and verification evidence were recovered from tool activity.</div>
    <div data-v-61cbb27f="" class="preview-notice error"><strong data-v-61cbb27f="">Tool Errors</strong>
      <ul data-v-61cbb27f="">
        <li data-v-61cbb27f="">tool warning</li>
      </ul>
    </div>
    <div data-v-61cbb27f="" class="generated-files-list"><button data-v-61cbb27f="" type="button" class="generated-file-row" aria-label="Preview generated file reports/generated.txt, available"><span data-v-61cbb27f="" class="generated-file-main"><span data-v-61cbb27f="" class="generated-file-path">reports/generated.txt</span><span data-v-61cbb27f="" class="badge">generated_files</span>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if--></span>
        <!--v-if-->
        <!--v-if-->
      </button><button data-v-61cbb27f="" type="button" class="generated-file-row disabled" aria-label="Preview generated file .saivage/auth-profiles.json, blocked"><span data-v-61cbb27f="" class="generated-file-main"><span data-v-61cbb27f="" class="generated-file-path">.saivage/auth-profiles.json</span><span data-v-61cbb27f="" class="badge">artifact_paths</span>
        <!--v-if-->
        <!--v-if-->
        <!--v-if--><span data-v-61cbb27f="" class="badge error">blocked</span></span>
        <!--v-if--><span data-v-61cbb27f="" class="generated-file-description">Path is outside the project root.</span>
      </button></div>
    <div data-v-61cbb27f="" class="preview-panel" aria-live="polite">
      <div data-v-61cbb27f="" class="preview-empty">Select a generated file to preview safe text content.</div>
    </div>
    <div data-v-61cbb27f="" class="verification-section">
      <h4 data-v-61cbb27f="" class="subheading">Verification Commands</h4>
      <div data-v-61cbb27f="" class="verification-row"><code data-v-61cbb27f="" class="inline-token generated-file-path">npm test</code><span data-v-61cbb27f="" class="badge">completed</span><span data-v-61cbb27f="" class="badge success">pass</span>
        <!--v-if--><span data-v-61cbb27f="" class="badge subtle">process p1</span>
      </div>
    </div>
  </section>
  <section data-v-61cbb27f="" class="detail-section">
    <h3 data-v-61cbb27f="" class="section-heading">Review result</h3>
    <div data-v-61cbb27f="" class="detail-callout warning"><strong data-v-61cbb27f="">Not reviewed</strong>
      <div data-v-61cbb27f="">No review result was returned by the card detail API.</div>
    </div>
    <!--v-if-->
  </section>
  <section data-v-61cbb27f="" class="detail-section">
    <h3 data-v-61cbb27f="" class="section-heading">Dispatch summary</h3>
    <div data-v-61cbb27f="" class="list-block">
      <div data-v-61cbb27f="" class="meta-key">Outgoing dispatches</div>
      <div data-v-61cbb27f="" class="verification-row"><button data-v-61cbb27f="" type="button" class="nav-pill">child-1</button><span data-v-61cbb27f="" class="badge">completed</span><span data-v-61cbb27f="" class="badge subtle">done</span><span data-v-61cbb27f="">done</span></div>
    </div>
    <!--v-if-->
  </section>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`CardDetailView generated file inspection > renders structured result values in a formatted pre/code JSON block 1`] = `
"<div data-v-61cbb27f="" class="card-detail-container">
  <section data-v-61cbb27f="" class="detail-section header-section" data-testid="card-detail-highlight">
    <div data-v-61cbb27f="" class="detail-title-row"><span data-v-61cbb27f="" class="detail-type-badge type-code">(C) code</span>
      <h1 data-v-61cbb27f="" class="detail-title">Card 1</h1><span data-v-61cbb27f="" class="detail-status-chip status-done">done</span><button data-v-61cbb27f="" type="button" class="discuss-btn" aria-label="Discuss card with analyst">Discuss with analyst</button>
    </div>
    <div data-v-61cbb27f="" class="detail-id">ID: card-1</div>
    <div data-v-61cbb27f="" class="detail-callout" role="status">This card is marked done; review and evidence determine whether operators should accept completion.</div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </section>
  <!--v-if-->
  <!--v-if-->
  <section data-v-61cbb27f="" class="detail-section">
    <h3 data-v-61cbb27f="" class="section-heading">Metadata</h3>
    <div data-v-61cbb27f="" class="meta-grid">
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Created</span><span data-v-61cbb27f="" class="meta-value" title="Jan 1, 2025, 01:00:00 AM">Jan 1, 2025, 01:00:00 AM</span></div>
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Updated</span><span data-v-61cbb27f="" class="meta-value" title="Jan 1, 2025, 01:00:00 AM">Jan 1, 2025, 01:00:00 AM</span></div>
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Version</span><span data-v-61cbb27f="" class="meta-value">unknown</span></div>
      <!--v-if-->
      <!--v-if-->
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Priority</span><span data-v-61cbb27f="" class="meta-value">1</span></div>
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Urgency</span><span data-v-61cbb27f="" class="meta-value">normal</span></div>
      <!--v-if-->
      <!--v-if-->
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Retries</span><span data-v-61cbb27f="" class="meta-value">0</span></div>
    </div>
  </section>
  <section data-v-6e31abb8="" data-v-61cbb27f="" class="detail-section">
    <div data-v-6e31abb8="" class="panel-header-row">
      <div data-v-6e31abb8="">
        <h3 data-v-6e31abb8="" class="section-heading">Card history</h3>
        <p data-v-6e31abb8="" class="panel-copy">Inspect tracked versions, fetch a full prior snapshot, and compare it to the current card.</p>
      </div>
      <div data-v-6e31abb8="" class="panel-header-actions"><button data-v-6e31abb8="" type="button" class="filter-chip" title="Filter card history by editor (currently: analyst)">by analyst</button><button data-v-6e31abb8="" type="button" class="retry-btn">Refresh history</button></div>
    </div>
    <div data-v-6e31abb8="" class="history-layout">
      <div data-v-6e31abb8="" class="history-list"><button data-v-6e31abb8="" type="button" class="history-item selected">
          <div data-v-6e31abb8="" class="history-item-top"><span data-v-6e31abb8="" class="badge subtle">v2</span><span data-v-6e31abb8="" class="badge">analyst</span><span data-v-6e31abb8="" class="badge analyst-badge">analyst (web-chat)</span><span data-v-6e31abb8="" class="badge subtle">web-chat</span></div>
          <div data-v-6e31abb8="" class="history-summary">updated title</div>
          <div data-v-6e31abb8="" class="history-fields">Changed: title</div>
          <div data-v-6e31abb8="" class="history-time" title="Jan 1, 2025, 01:00:00 AM">Jan 1, 2025, 01:00:00 AM</div>
        </button></div>
      <div data-v-6e31abb8="" class="history-detail">
        <div data-v-6e31abb8="" class="empty-evidence">Select a version to inspect its snapshot and diff.</div>
      </div>
    </div>
  </section>
  <section data-v-61cbb27f="" class="detail-section">
    <h3 data-v-61cbb27f="" class="section-heading">Completion &amp; blockers</h3>
    <div data-v-61cbb27f="" class="meta-grid">
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Completion state</span><span data-v-61cbb27f="" class="meta-value">marked-done</span></div>
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Evidence readiness</span><span data-v-61cbb27f="" class="meta-value">1 recorded evidence path is blocked by file-access security.</span></div>
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Child work</span><span data-v-61cbb27f="" class="meta-value">1 children: 1 active/running, 0 blocked/failed, 0 done</span></div>
    </div>
    <div data-v-61cbb27f="" class="link-list-row"><span data-v-61cbb27f="" class="meta-key">Blocking dependencies</span>
      <div data-v-61cbb27f="" class="pill-list"><button data-v-61cbb27f="" type="button" class="nav-pill">goal-1</button></div>
    </div>
    <!--v-if-->
    <div data-v-61cbb27f="" class="planning-summary"><strong data-v-61cbb27f="">Planning</strong>
      <div data-v-61cbb27f="">Status: done</div>
      <div data-v-61cbb27f="">Planner completed</div>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </section>
  <section data-v-61cbb27f="" class="detail-section">
    <h3 data-v-61cbb27f="" class="section-heading">Hierarchy</h3>
    <div data-v-61cbb27f="" class="link-list-row"><span data-v-61cbb27f="" class="meta-key">Ancestors</span>
      <div data-v-61cbb27f="" class="pill-list"><button data-v-61cbb27f="" type="button" class="nav-pill">project</button></div>
    </div>
    <div data-v-61cbb27f="" class="children-list"><button data-v-61cbb27f="" type="button" class="child-row"><span data-v-61cbb27f="" class="generated-file-main"><span data-v-61cbb27f="" class="generated-file-path">child-1</span><span data-v-61cbb27f="" class="badge">test</span><span data-v-61cbb27f="" class="badge status-running">running</span></span><span data-v-61cbb27f="" class="generated-file-description">Child</span></button></div>
  </section>
  <section data-v-61cbb27f="" class="detail-section">
    <h3 data-v-61cbb27f="" class="section-heading">Evidence &amp; generated files</h3>
    <div data-v-61cbb27f="" class="evidence-summary">1 recorded evidence path is blocked by file-access security.</div>
    <div data-v-61cbb27f="" class="pill-list summary-pills"><span data-v-61cbb27f="" class="badge">Files: 2</span><span data-v-61cbb27f="" class="badge">Checks: 1</span><span data-v-61cbb27f="" class="badge">Tool errors: 1</span>
      <!--v-if--><span data-v-61cbb27f="" class="badge error">Blocked: 1</span>
      <!--v-if--><span data-v-61cbb27f="" class="badge warning">Parse recovery</span>
    </div>
    <div data-v-61cbb27f="" class="preview-notice warning">Executor final response was malformed; generated files and verification evidence were recovered from tool activity.</div>
    <div data-v-61cbb27f="" class="preview-notice error"><strong data-v-61cbb27f="">Tool Errors</strong>
      <ul data-v-61cbb27f="">
        <li data-v-61cbb27f="">tool warning</li>
      </ul>
    </div>
    <div data-v-61cbb27f="" class="generated-files-list"><button data-v-61cbb27f="" type="button" class="generated-file-row" aria-label="Preview generated file reports/generated.txt, available"><span data-v-61cbb27f="" class="generated-file-main"><span data-v-61cbb27f="" class="generated-file-path">reports/generated.txt</span><span data-v-61cbb27f="" class="badge">generated_files</span>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if--></span>
        <!--v-if-->
        <!--v-if-->
      </button><button data-v-61cbb27f="" type="button" class="generated-file-row disabled" aria-label="Preview generated file .saivage/auth-profiles.json, blocked"><span data-v-61cbb27f="" class="generated-file-main"><span data-v-61cbb27f="" class="generated-file-path">.saivage/auth-profiles.json</span><span data-v-61cbb27f="" class="badge">artifact_paths</span>
        <!--v-if-->
        <!--v-if-->
        <!--v-if--><span data-v-61cbb27f="" class="badge error">blocked</span></span>
        <!--v-if--><span data-v-61cbb27f="" class="generated-file-description">Path is outside the project root.</span>
      </button></div>
    <div data-v-61cbb27f="" class="preview-panel" aria-live="polite">
      <div data-v-61cbb27f="" class="preview-empty">Select a generated file to preview safe text content.</div>
    </div>
    <div data-v-61cbb27f="" class="verification-section">
      <h4 data-v-61cbb27f="" class="subheading">Verification Commands</h4>
      <div data-v-61cbb27f="" class="verification-row"><code data-v-61cbb27f="" class="inline-token generated-file-path">npm test</code><span data-v-61cbb27f="" class="badge">completed</span><span data-v-61cbb27f="" class="badge success">pass</span>
        <!--v-if--><span data-v-61cbb27f="" class="badge subtle">process p1</span>
      </div>
    </div>
  </section>
  <section data-v-61cbb27f="" class="detail-section">
    <h3 data-v-61cbb27f="" class="section-heading">Review result</h3>
    <div data-v-61cbb27f="" class="detail-callout warning"><strong data-v-61cbb27f="">Not reviewed</strong>
      <div data-v-61cbb27f="">No review result was returned by the card detail API.</div>
    </div>
    <!--v-if-->
  </section>
  <section data-v-61cbb27f="" class="detail-section">
    <h3 data-v-61cbb27f="" class="section-heading">Dispatch summary</h3>
    <div data-v-61cbb27f="" class="list-block">
      <div data-v-61cbb27f="" class="meta-key">Outgoing dispatches</div>
      <div data-v-61cbb27f="" class="verification-row"><button data-v-61cbb27f="" type="button" class="nav-pill">child-1</button><span data-v-61cbb27f="" class="badge">completed</span><span data-v-61cbb27f="" class="badge subtle">done</span><span data-v-61cbb27f="">done</span></div>
    </div>
    <!--v-if-->
  </section>
  <!--v-if-->
  <section data-v-61cbb27f="" class="detail-section">
    <h3 data-v-61cbb27f="" class="section-heading">Result</h3>
    <div data-v-4d2510fd="" data-v-61cbb27f="" class="code-block"><button data-v-4d2510fd="" type="button" class="code-block__copy" title="Copy">copy</button>
      <!--v-if--><pre data-v-4d2510fd="" class="code-block__pre language-json hljs" style="max-height: 60vh; white-space: pre;"><code data-v-4d2510fd="" class="code-block__code"><span class="hljs-punctuation">{</span>
  <span class="hljs-attr">"planning"</span><span class="hljs-punctuation">:</span> <span class="hljs-punctuation">{</span>
    <span class="hljs-attr">"status"</span><span class="hljs-punctuation">:</span> <span class="hljs-string">"blocked"</span><span class="hljs-punctuation">,</span>
    <span class="hljs-attr">"blocked_reason"</span><span class="hljs-punctuation">:</span> <span class="hljs-string">"needs input"</span>
  <span class="hljs-punctuation">}</span>
<span class="hljs-punctuation">}</span></code></pre>
    </div>
  </section>
</div>"
`;

exports[`CardDetailView generated file inspection > renders the empty evidence state as one sentence without counters or preview placeholder 1`] = `
"<div data-v-61cbb27f="" class="card-detail-container">
  <section data-v-61cbb27f="" class="detail-section header-section" data-testid="card-detail-highlight">
    <div data-v-61cbb27f="" class="detail-title-row"><span data-v-61cbb27f="" class="detail-type-badge type-code">(C) code</span>
      <h1 data-v-61cbb27f="" class="detail-title">Card 1</h1><span data-v-61cbb27f="" class="detail-status-chip status-done">done</span><button data-v-61cbb27f="" type="button" class="discuss-btn" aria-label="Discuss card with analyst">Discuss with analyst</button>
    </div>
    <div data-v-61cbb27f="" class="detail-id">ID: card-1</div>
    <div data-v-61cbb27f="" class="detail-callout" role="status">This card is marked done; review and evidence determine whether operators should accept completion.</div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </section>
  <!--v-if-->
  <!--v-if-->
  <section data-v-61cbb27f="" class="detail-section">
    <h3 data-v-61cbb27f="" class="section-heading">Metadata</h3>
    <div data-v-61cbb27f="" class="meta-grid">
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Created</span><span data-v-61cbb27f="" class="meta-value" title="Jan 1, 2025, 01:00:00 AM">Jan 1, 2025, 01:00:00 AM</span></div>
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Updated</span><span data-v-61cbb27f="" class="meta-value" title="Jan 1, 2025, 01:00:00 AM">Jan 1, 2025, 01:00:00 AM</span></div>
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Version</span><span data-v-61cbb27f="" class="meta-value">unknown</span></div>
      <!--v-if-->
      <!--v-if-->
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Priority</span><span data-v-61cbb27f="" class="meta-value">1</span></div>
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Urgency</span><span data-v-61cbb27f="" class="meta-value">normal</span></div>
      <!--v-if-->
      <!--v-if-->
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Retries</span><span data-v-61cbb27f="" class="meta-value">0</span></div>
    </div>
  </section>
  <section data-v-6e31abb8="" data-v-61cbb27f="" class="detail-section">
    <div data-v-6e31abb8="" class="panel-header-row">
      <div data-v-6e31abb8="">
        <h3 data-v-6e31abb8="" class="section-heading">Card history</h3>
        <p data-v-6e31abb8="" class="panel-copy">Inspect tracked versions, fetch a full prior snapshot, and compare it to the current card.</p>
      </div>
      <div data-v-6e31abb8="" class="panel-header-actions"><button data-v-6e31abb8="" type="button" class="filter-chip" title="Filter card history by editor (currently: analyst)">by analyst</button><button data-v-6e31abb8="" type="button" class="retry-btn">Refresh history</button></div>
    </div>
    <div data-v-6e31abb8="" class="history-layout">
      <div data-v-6e31abb8="" class="history-list"><button data-v-6e31abb8="" type="button" class="history-item selected">
          <div data-v-6e31abb8="" class="history-item-top"><span data-v-6e31abb8="" class="badge subtle">v2</span><span data-v-6e31abb8="" class="badge">analyst</span><span data-v-6e31abb8="" class="badge analyst-badge">analyst (web-chat)</span><span data-v-6e31abb8="" class="badge subtle">web-chat</span></div>
          <div data-v-6e31abb8="" class="history-summary">updated title</div>
          <div data-v-6e31abb8="" class="history-fields">Changed: title</div>
          <div data-v-6e31abb8="" class="history-time" title="Jan 1, 2025, 01:00:00 AM">Jan 1, 2025, 01:00:00 AM</div>
        </button></div>
      <div data-v-6e31abb8="" class="history-detail">
        <div data-v-6e31abb8="" class="empty-evidence">Select a version to inspect its snapshot and diff.</div>
      </div>
    </div>
  </section>
  <section data-v-61cbb27f="" class="detail-section">
    <h3 data-v-61cbb27f="" class="section-heading">Completion &amp; blockers</h3>
    <div data-v-61cbb27f="" class="meta-grid">
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Completion state</span><span data-v-61cbb27f="" class="meta-value">marked-done</span></div>
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Evidence readiness</span><span data-v-61cbb27f="" class="meta-value">No evidence summary returned.</span></div>
      <div data-v-61cbb27f="" class="meta-item"><span data-v-61cbb27f="" class="meta-key">Child work</span><span data-v-61cbb27f="" class="meta-value">1 children: 1 active/running, 0 blocked/failed, 0 done</span></div>
    </div>
    <div data-v-61cbb27f="" class="link-list-row"><span data-v-61cbb27f="" class="meta-key">Blocking dependencies</span>
      <div data-v-61cbb27f="" class="pill-list"><button data-v-61cbb27f="" type="button" class="nav-pill">goal-1</button></div>
    </div>
    <!--v-if-->
    <div data-v-61cbb27f="" class="planning-summary"><strong data-v-61cbb27f="">Planning</strong>
      <div data-v-61cbb27f="">Status: done</div>
      <div data-v-61cbb27f="">Planner completed</div>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </section>
  <section data-v-61cbb27f="" class="detail-section">
    <h3 data-v-61cbb27f="" class="section-heading">Hierarchy</h3>
    <div data-v-61cbb27f="" class="link-list-row"><span data-v-61cbb27f="" class="meta-key">Ancestors</span>
      <div data-v-61cbb27f="" class="pill-list"><button data-v-61cbb27f="" type="button" class="nav-pill">project</button></div>
    </div>
    <div data-v-61cbb27f="" class="children-list"><button data-v-61cbb27f="" type="button" class="child-row"><span data-v-61cbb27f="" class="generated-file-main"><span data-v-61cbb27f="" class="generated-file-path">child-1</span><span data-v-61cbb27f="" class="badge">test</span><span data-v-61cbb27f="" class="badge status-running">running</span></span><span data-v-61cbb27f="" class="generated-file-description">Child</span></button></div>
  </section>
  <section data-v-61cbb27f="" class="detail-section">
    <h3 data-v-61cbb27f="" class="section-heading">Evidence &amp; generated files</h3>
    <div data-v-61cbb27f="" class="empty-evidence">No evidence has been recorded for this card.</div>
  </section>
  <section data-v-61cbb27f="" class="detail-section">
    <h3 data-v-61cbb27f="" class="section-heading">Review result</h3>
    <div data-v-61cbb27f="" class="detail-callout warning"><strong data-v-61cbb27f="">Not reviewed</strong>
      <div data-v-61cbb27f="">No review result was returned by the card detail API.</div>
    </div>
    <!--v-if-->
  </section>
  <section data-v-61cbb27f="" class="detail-section">
    <h3 data-v-61cbb27f="" class="section-heading">Dispatch summary</h3>
    <div data-v-61cbb27f="" class="list-block">
      <div data-v-61cbb27f="" class="meta-key">Outgoing dispatches</div>
      <div data-v-61cbb27f="" class="verification-row"><button data-v-61cbb27f="" type="button" class="nav-pill">child-1</button><span data-v-61cbb27f="" class="badge">completed</span><span data-v-61cbb27f="" class="badge subtle">done</span><span data-v-61cbb27f="">done</span></div>
    </div>
    <!--v-if-->
  </section>
  <!--v-if-->
  <!--v-if-->
</div>"
`;
